--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "netlify-cli": "^6.5.1",
     "prop-types": "^15.7.2",
