--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "moment": "^2.29.1",
     "netlify-cli": "^6.5.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -18,6 +19,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-sweet-progress": "^1.1.2",
     "react-switch": "^6.0.0",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
