--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.0",
     "styles": "^0.2.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
