--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "modern-normalize": "^1.1.0",
     "moment": "^2.29.1",
+    "netlify": "^8.0.0",
     "netlify-cli": "^6.5.1",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
