--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-sweet-progress": "^1.1.2",
     "react-switch": "^6.0.0",
     "redux": "^4.1.0",
