--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "axios": "^0.21.1",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
+    "i18next": "^20.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.0",
     "modern-normalize": "^1.1.0",
     "moment": "^2.29.1",
     "netlify": "^8.0.0",
@@ -18,6 +21,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.11.4",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
