--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "express-openapi-validator": "^4.13.0",
     "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "i18next": "^20.4.0",
